[package]
name = "aarch64-kvm-regs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
kvm-bindings = "0.7.0"
kvm-ioctls = "0.16.0"
thiserror = "1.0.39"
